--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -885,8 +885,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "ea3be44d-bfd8-4704-9d92-b8da6f15aa81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/moe/jupyter_note_pract_soft'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "23a4a9d4-c0ee-491f-acc9-50d0d3703c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Student = ['Harry', 'Marry', 'Gary', 'Scary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "da8f2ccd-fa5f-45d5-9ec3-d4f2eb8491c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Harry'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "309e787f-fb04-439c-824c-84ce867f0c93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Student[1] = 'Soha'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "a1650ca1-2133-4e84-a727-859e37ec2e38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Harry', 'Soha', 'Gary', 'Scary']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b6c10e5f-466f-4371-aa69-4ed755f7a0c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del Student[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1ee8e7ed-8565-4e05-91ba-3449c9ae3170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Soha', 'Gary', 'Scary']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22bd7891-763e-4234-9ab3-4441e9fa9b6c",
    "metadata": {},
    "outputs": [],
    "source": []
