--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -1342,8 +1342,418 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fff15b51-c1d2-4029-9dc8-b5c8a93ef575",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/moe/jupyter_note_pract_soft'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69465500-e9f4-48de-8acb-05b4f9cf620e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tuples\n",
+    "x = (1, 2, 2, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3e048257-5676-4d83-8170-35606ff1f130",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 2, 3, 4)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6d90573b-14cb-4e82-bc48-0c2acb00a53a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, c, v = 9, 3, 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d3fbde1e-bbee-4e9b-8b78-30cfaf199e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4a4de442-9fac-40f8-8dab-702b4879041e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "185adeda-aa08-419d-8a35-b3ac73594d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(age, name) = \"30, Moe\".split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "540c7327-bfee-4d53-97a0-035a89a3fc98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "19318344-bd48-430b-bcc6-67bda129dbe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Moe\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d0407635-9ee3-4515-841a-d5a7d2353d18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area and Perminter:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(25, 20)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square_info(x):\n",
+    "    A = x ** 2\n",
+    "    B = x * 4\n",
+    "    print(\"Area and Perminter:\")\n",
+    "    return A, B\n",
+    "\n",
+    "square_info(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f4672b79-58ba-4413-9be8-86dbd286d09b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cat'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#dictionaries\n",
+    "\n",
+    "dict = {'k1': 'cat', 'k2': 'dog', 'k3': 'parrot'}\n",
+    "dict['k1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b5f6a6c3-a173-4c3f-a11f-7c7eee7ff602",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'parrot'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict['k3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e2562c98-1800-47b1-85f9-ede928c330b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'k1': 'cat', 'k2': 'dog', 'k3': 'parrot', 'k4': 'mouse'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict['k4'] = 'mouse'\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6fd92590-dabc-4e92-b787-b134b7420afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'k1': 'dolphin', 'k2': 'dog', 'k3': 'parrot', 'k4': 'mouse'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict['k1']='dolphin'\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "422d0417-9fd4-4c01-b412-e56f042feef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dep_workers = {'dep_1': 'Peter', 'dep_2': ['Mark', 'Jennifer', 'Tommy']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "55e22b8f-3ba0-4714-a7ac-495e4d350fef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Peter'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dep_workers['dep_1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6c6e39b2-2045-43bf-b4b7-7dd9538a091e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mark', 'Jennifer', 'Tommy']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dep_workers['dep_2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "835b7a5a-095c-4580-85d4-0b66cf2e7864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alpha': 'Male', 'Beta': 'Dogs', 'Ceta': 'Mice', 'Center': 'Ashbal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Team = {}\n",
+    "Team['Alpha'] = 'Male'\n",
+    "Team['Beta'] = 'Dogs'\n",
+    "Team['Ceta'] = 'Mice'\n",
+    "Team['Center'] = 'Ashbal'\n",
+    "print(Team)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "87389e27-733b-42d4-bace-27a693554d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Male'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Team.get('Alpha')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4e7e85e6-a40f-4e7c-b125-2c28950b9a7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Team.get('Rum'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "21185459-f63e-4670-979a-d752781c3a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "':' expected after dictionary key (3223711402.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mMenu = {'meal_1':'Spaghetti', 'meal_2':'Fries', 'meal_3':'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5':'Soup', Dessert}\u001b[39m\n                                                                                                                         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m ':' expected after dictionary key\n"
+     ]
+    }
+   ],
+   "source": [
+    "Menu = {'meal_1':'Spaghetti', 'meal_2':'Fries', 'meal_3':'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5':'Soup', Dessert}\n",
+    "Dessert = ['Pancakes', 'Ice-cream', 'Tiramisu']\n",
+    "\n",
+    "print(Menu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "165ee3f9-9914-409f-8186-7a59b29f8675",
    "metadata": {},
    "outputs": [],
    "source": []
