--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -1730,30 +1730,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "21185459-f63e-4670-979a-d752781c3a98",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "':' expected after dictionary key (3223711402.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mMenu = {'meal_1':'Spaghetti', 'meal_2':'Fries', 'meal_3':'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5':'Soup', Dessert}\u001b[39m\n                                                                                                                         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m ':' expected after dictionary key\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'meal_1': 'Spaghetti', 'meal_2': 'Fries', 'meal_3': 'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5': 'Soup', 'meal_6': ['Pancakes', 'Ice-cream', 'Tiramisu']}\n"
      ]
     }
    ],
    "source": [
-    "Menu = {'meal_1':'Spaghetti', 'meal_2':'Fries', 'meal_3':'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5':'Soup', Dessert}\n",
     "Dessert = ['Pancakes', 'Ice-cream', 'Tiramisu']\n",
+    "\n",
+    "Menu = {'meal_1':'Spaghetti', 'meal_2':'Fries', 'meal_3':'Cheeseburger', 'meal_4': 'Lasagna', 'meal_5':'Soup', 'meal_6': Dessert}\n",
     "\n",
     "print(Menu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "165ee3f9-9914-409f-8186-7a59b29f8675",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For Loop\n",
+    "\n",
+    "list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "even_list = []\n",
+    "\n",
+    "for i in list:\n",
+    "    if i % 2 == 0:\n",
+    "        even_list.append(i)\n",
+    "\n",
+    "even_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "e9a953c6-d971-470e-8762-b203cb08c74a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "digits = [0,1,2,3,4,5,6,7,8,9]\n",
+    "\n",
+    "for x in digits:\n",
+    "    print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "97530143-98b6-4d7f-8560-e5f294267d67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 7 9 11 13 15 17 19 21 23 25 27 29 "
+     ]
+    }
+   ],
+   "source": [
+    "# While Loop\n",
+    "\n",
+    "x = 0\n",
+    "while x <= 30:\n",
+    "    if x % 2 != 0:\n",
+    "        print(x, end=' ')\n",
+    "    x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "eafc4027-90de-46b8-aab3-03ceef764362",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# range (start, stop, sequence)\n",
+    "\n",
+    "range(0, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "7ca97e27-c65c-46d6-9fc8-a1c634f857e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10, 2)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(0, 10, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "fcf80611-32f1-4c58-93a3-78faa2fefd06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'range'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "308ff6d7-9eaa-4bf6-bed5-387fd6076558",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(3, 7)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(3, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "34d2c245-c00d-4336-878c-7299354d9dae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "91b75d92-5054-4e39-9f89-3f3af14566bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(3, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "137b76ef-850e-4122-b4fc-bab57fa9438a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 7, 9, 11, 13, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(3, 20, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "cf027416-7907-41cb-9405-a787cf159218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4 8 16 32 64 128 256 512 "
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(10):\n",
+    "    print(2 ** n , end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "a60f0a6c-bbf9-4fea-9ae4-4b66618e0873",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is an even number 1 is an odd number 2 is an even number 3 is an odd number 4 is an even number 5 is an odd number 6 is an even number 7 is an odd number 8 is an even number 9 is an odd number 10 is an even number 11 is an odd number 12 is an even number 13 is an odd number 14 is an even number 15 is an odd number 16 is an even number 17 is an odd number 18 is an even number 19 is an odd number "
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(20):\n",
+    "    if(n % 2 == 0):\n",
+    "        print(f'{n} is an even number', end=' ')\n",
+    "    else:\n",
+    "        print(f'{n} is an odd number', end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "6ddbe1b8-9a0d-4d33-847b-c7b7486021ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 4]\n",
+    "\n",
+    "for num in x:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "b6729600-ec60-40f4-8b3b-d07dc3474ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numz in range(len(x)):\n",
+    "    print(x[numz] + 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "d91a8a22-0a32-4f31-abde-0db7b296694f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Even 3 Even 5 Even 7 Even 9 Even 11 Even 13 Even 15 Even 17 Even 19 Even 21 Even 23 Even 25 Even 27 Even 29 Even "
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1, 31):\n",
+    "    if(x % 2 != 0):\n",
+    "        print(x, end=' ')\n",
+    "    else: \n",
+    "        print(\"Even\", end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdf08282-daf6-40f4-8df1-591cac834038",
    "metadata": {},
    "outputs": [],
    "source": []
