--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -2069,8 +2069,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "bdf08282-daf6-40f4-8df1-591cac834038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many numbers under 20\n",
+    "def count (numbers):\n",
+    "    total = 0\n",
+    "    for x in numbers:\n",
+    "        if x < 20:\n",
+    "            total += 1\n",
+    "    return total\n",
+    "\n",
+    "list_1 = [1, 2, 2, 5, 6, 20, 25, 5]\n",
+    "\n",
+    "count(list_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "897efb7f-acbe-44c1-95ff-14b09f7c0b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "215\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loop dictionaries\n",
+    "\n",
+    "prices = {\n",
+    "    \"hamburger\": 5,\n",
+    "    \"cheese\": 10,\n",
+    "    \"shrimp\": 7\n",
+    "}\n",
+    "\n",
+    "quantity = {\n",
+    "    \"hamburger\": 9,\n",
+    "    \"cheese\": 3,\n",
+    "    \"shrimp\": 20\n",
+    "}\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "for x in prices: \n",
+    "    total = total + (prices[x] * quantity[x])\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "76898263-aa1c-4cb3-b956-e037d4ab62ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "prices = {\n",
+    "    \"box_of_spaghetti\" : 4,\n",
+    "    \"lasagna\"  : 5,\n",
+    "    \"hamburger\" : 2\n",
+    "   }\n",
+    "quantity = {\n",
+    "    \"box_of_spaghetti\" : 6,\n",
+    "    \"lasagna\"  : 10,\n",
+    "    \"hamburger\" : 0\n",
+    "    }\n",
+    "\n",
+    "money_spent = 0\n",
+    "\n",
+    "for i in prices:\n",
+    "    if prices[i] > 5:\n",
+    "        money_spent = money_spent + (prices[i] * quantity[i])\n",
+    "        \n",
+    "print(money_spent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "784af4f2-e935-4d6b-8e93-6d891c35b79b",
    "metadata": {},
    "outputs": [],
    "source": []
