--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -2747,11 +2747,428 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "bfaf4f35-b87b-4f3c-bbd3-e2f61b058c3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# regex\n",
+    "\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "641c1377-2c28-45f9-a6ff-dd9a1a47c6ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/moe/jupyter_note_pract_soft'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "e0ad7c7c-b99d-4c7b-8c4d-bd87eff2c4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_search = re.search(\"pattern\", r\"string to contain the pattern\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "d5f32e5d-8937-44f6-967a-5f5872c35727",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(22, 29), match='pattern'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result_search)\n",
+    "# re.search\n",
+    "#it matches the string pattern and find first match in the sentence \"string to contain the pattern\" and provides its index span\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "a3624297-f4a6-416c-9ab3-84d230bcfe0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_search_2 = re.search(\"Iron\", r\"I am a Metallica Fan\")\n",
+    "print(result_search_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "92818af9-be2b-4193-a808-91a055522676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_search_3 = re.search(\"Iron Maiden\", r\"I am a Maiden Fan\")\n",
+    "print(result_search_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "79aac3c5-9c6d-4d7c-8ea6-0b8ab8478c77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_search_4 = re.search(\"maiden\", r\"I am a Maiden Fan\")\n",
+    "print(result_search_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "ad58b44c-c733-43fb-af4e-44fe74851104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't know where Sarah went\n"
+     ]
+    }
+   ],
+   "source": [
+    "# re.sub replaces word as follows\n",
+    "\n",
+    "sara_string = r\"I don't know where sara went\"\n",
+    "sara_string_enhanced = re.sub(\"sara\",  \"Sarah\", sara_string)\n",
+    "print(sara_string_enhanced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "83fd3c1a-e6c4-443e-bac7-e3cc8d438afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_reviews = ['sam was a great help in the store', \"the cashier was very rude to me, I think her name was Eleanor\", \"Amazing work from Sadeen!\", \n",
+    "\"sarah was able to me find the items I needed\", 'lucy is such an addition to the team',\n",
+    "'great service from sara']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "b817109d-f62f-42ca-97ea-a8687fa53a0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I want to get all sara's reviews while considering mispelling\n",
+    "\n",
+    "sarahs_review = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "6096f520-8d5a-4ead-a9af-10e9116bfb69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern_to_find = r\"sarah?\" #? after the h means it is an optional character to match so, it is like either sara or sarah"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "2e009b4d-002f-4fbd-951b-fe3af11b8dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sarah was able to me find the items I needed', 'great service from sara', 'sarah was able to me find the items I needed', 'great service from sara']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for string in customer_reviews:\n",
+    "    if(re.search(pattern_to_find, string)):\n",
+    "        sarahs_review.append(string)\n",
+    "\n",
+    "print(sarahs_review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "da5feca8-8e9c-408e-84ca-6e2bcca925f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a Moe is, a wild wanted man', 'Mohamed is. indeed needed there', 'Mohamster!!!! and Ahmed are not friends']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get all reviews with Mo\n",
+    "\n",
+    "wild_sentences = [\n",
+    "    'a Moe is, a wild wanted man',\n",
+    "    'Mohamed is. indeed needed there', \n",
+    "    'Mohamster!!!! and Ahmed are not friends',\n",
+    "    'a Mamdouh is on board'\n",
+    "]\n",
+    "\n",
+    "moe_sentences = []\n",
+    "moe_pattern = r\"\\bmo(e|h)\" #optional e or h after mo\n",
+    "\n",
+    "for name in wild_sentences:\n",
+    "    if(re.search(moe_pattern, name, re.IGNORECASE)):\n",
+    "        moe_sentences.append(name)\n",
+    "\n",
+    "print(moe_sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "5f76798d-3195-4ed8-bcca-38205b63d6f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jack helped me carry my groceries.', 'Jacque was very patient and kind.', 'Jake fixed the issue right want awa wily.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = [\n",
+    "    \"Jack helped me carry my groceries.\",\n",
+    "    \"Jacque was very patient and kind.\",\n",
+    "    \"Jake fixed the issue right want awa wily.\",\n",
+    "    \"Jasmine was also excellent.\",\n",
+    "    \"Jackson did not show up.\"\n",
+    "]\n",
+    "\n",
+    "matched_sentences = []\n",
+    "pattern = r\"\\bja(c(k|que)|ke)\\b\"\n",
+    "\n",
+    "\n",
+    "for sentence in sentences:\n",
+    "    if re.search(pattern, sentence, re.IGNORECASE):\n",
+    "        matched_sentences.append(sentence)\n",
+    "\n",
+    "print(matched_sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "0be6cd31-3093-4cb6-b263-2abb7c96e2ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a Moe is a wild man', 'a Mamdouh is on board']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pattern that begins with a letter, in this case 'a'\n",
+    "\n",
+    "a_reviews = []\n",
+    "pattern_to_find = r\"^a\"\n",
+    "\n",
+    "for name in wild_sentences:\n",
+    "    if re.search(pattern_to_find, name):\n",
+    "        a_reviews.append(name)\n",
+    "\n",
+    "print(a_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "00b1375a-2cbb-47c4-b604-37d32b8c39e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a Mamdouh is on board']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pattern that ends with a letter, in this case 'd'\n",
+    "\n",
+    "d_reviews = []\n",
+    "pattern_to_find = r\"d$\"\n",
+    "\n",
+    "for name in wild_sentences:\n",
+    "    if re.search(pattern_to_find, name):\n",
+    "        d_reviews.append(name)\n",
+    "\n",
+    "print(d_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "69b2235c-8874-43bc-b102-61e955f4ce63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a Moe is a wild wanted man', 'Mohamed is indeed needed there']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# patter with multiple words\n",
+    "needwant_reviews = []\n",
+    "new_pattern_to_find = r\"(need|want)ed\"\n",
+    "\n",
+    "for stuff in wild_sentences:\n",
+    "    if re.search(new_pattern_to_find, stuff):\n",
+    "        needwant_reviews.append(stuff)\n",
+    "\n",
+    "print(needwant_reviews)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "dd881338-97ae-4188-8666-a28938309f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a Moe is a wild wanted man', 'Mohamed is indeed needed there', 'Mohamster and Ahmed are not friends', 'a Mamdouh is on board']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove punctuation\n",
+    "no_punctuation_reviews = []\n",
+    "no_punc_pattern = r\"[^\\w\\s]\"\n",
+    "\n",
+    "for string in wild_sentences:\n",
+    "    no_punc_string = re.sub(no_punc_pattern, \"\", string)\n",
+    "    no_punctuation_reviews.append(no_punc_string)\n",
+    "\n",
+    "print(no_punctuation_reviews)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "7e706618-dd5e-4f47-91fa-8b7aec8efaa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to /Users/moe/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('punkt_tab')\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "7615a591-5bed-4651-a9a4-919d2ef3997b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Her cat's name is no longer Luna, it is potato face\"]"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "july_sentence = \"Her cat's name is no longer Luna, it is potato face\"\n",
+    "sent_tokenize(july_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2df1a135-3227-43a4-9f55-8e966486a000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_sentence_1 = \"Her cat's name is no longer Luna\"\n",
+    "word"
+   ]
   }
  ],
  "metadata": {
