--- a/prac_365.ipynb
+++ b/prac_365.ipynb
@@ -3161,14 +3161,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "2df1a135-3227-43a4-9f55-8e966486a000",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Her', 'cat', \"'s\", 'name', 'is', 'no', 'longer', 'Luna']"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "part_sentence_1 = \"Her cat's name is no longer Luna\"\n",
+    "word_tokenize(part_sentence_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "fd36679a-6ebf-4b48-91af-8a9a4bf5d17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Her',\n",
+       " 'cat',\n",
+       " \"'s\",\n",
+       " 'name',\n",
+       " 'is',\n",
+       " 'no',\n",
+       " 'longer',\n",
+       " 'Luna',\n",
+       " ',',\n",
+       " 'it',\n",
+       " 'is',\n",
+       " 'potato',\n",
+       " 'face']"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_2 = \"Her cat's name is no longer Luna, it is potato face\"\n",
+    "word_tokenize(sentence_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "82ca4083-5031-4132-84ea-388a98b10edf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "part_sentence_1 = \"Her cat's name is no longer Luna\"\n",
-    "word"
+    "# one way to standardize text is Stemming\n",
+    "\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "653563bd-7762-4254-9985-6d32c33c9a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps = PorterStemmer()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f05ca33c-f940-46c6-b881-7f2c4f9cbf12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connect_tokens = ['connecting', 'connected', 'connectivity', 'connect', 'connects']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "20b7d894-5e33-4abf-8461-a1d8efbb0845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connecting :  connect\n",
+      "connected :  connect\n",
+      "connectivity :  connect\n",
+      "connect :  connect\n",
+      "connects :  connect\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in connect_tokens:\n",
+    "    print(t, \": \", ps.stem(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f4bd9146-5c58-466c-872f-71d4d25c16c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn_tokens = ['learned', 'learning', 'learn', 'learns', 'learner', 'learners']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "10c50518-60a2-4953-b891-d79aa265eed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learned :  learn\n",
+      "learning :  learn\n",
+      "learn :  learn\n",
+      "learns :  learn\n",
+      "learner :  learner\n",
+      "learners :  learner\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in learn_tokens:\n",
+    "    print(t, \": \", ps.stem(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab83b9e2-8ba5-4986-a3b1-f7ede30f39dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
